added newline to EOF for json files

--- a/docs/team/WeiBoon.adoc
+++ b/docs/team/WeiBoon.adoc
@@ -158,7 +158,7 @@ Please click these links to see a sample of my code.
 ** Wrote additional tests for existing features to increase coverage from 51% to 60% : https://github.com/AY1920S1-CS2103T-W13-2/main/pull/188[#188]
 
 * Documentation:
-** Made cosmetic tweaks to the existing contents of the User Guide: https://github.com/AY1920S1-CS2103T-W13-2/main/pull/176[#176]
+** Made cosmetic tweaks and added figure number to the existing contents of the User Guide: https://github.com/AY1920S1-CS2103T-W13-2/main/pull/195[#195]
 
 ** Made relevant changes for the Developer Guide: https://github.com/AY1920S1-CS2103T-W13-2/main/pull/188[#188]
 
